--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "require": {
     "php": "^7.4 || ^8.0",
     "hidehalo/nanoid-php": "^1.1",
-    "httpsoft/http-server-request": "^1.1"
+    "psr/http-message": "^1.1|^2.0"
   },
   "autoload": {
     "psr-4": {
